// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theme styles adjusts top and bottom padding to passed props 1`] = `
.c0 {
  width: 100%;
}

@media (min-width:75em) {
  .c0 {
    max-width: 75em;
  }
}

<div
  class="c0"
>
  Nord
</div>
`;

exports[`theme styles has top and bottom padding 1`] = `
.c0 {
  width: 100%;
  padding-top: 5em;
  padding-bottom: 5em;
}

@media (min-width:75em) {
  .c0 {
    max-width: 75em;
  }
}

<div
  class="c0"
>
  Nord
</div>
`;
